<resources>
    <string name="app_name">恋人探しアンケート2016</string>
    <string name="positive_max">そう思う</string>
    <string name="positive">少しそう思う</string>
    <string name="natural">どちらとも思わない</string>
    <string name="negative">あまりそう思わない</string>
    <string name="negative_max">そう思わない</string>
    <string name="next">次へ</string>
    <string name="start">始める！</string>
    <string name="end">終了</string>
    <string name="user_name">名前</string>
    <string name="user_name_hint">お名前(ハンドルネーム推奨)</string>
    <string name="user_sex">性別</string>
    <string name="male">おとこのこ</string>
    <string name="female">おんなのこ</string>
    <string name="welcome_msg">
        毎年恒例、情報処理研究会による恋人探しアンケートへようこそ！\n
        20個の質問に答えて、高専祭を訪れる人のなかから、あなたに最適な恋人候補を探し出しませんか？
    </string>
    <string name="thanks_msg">
        アンケートへのご協力ありがとうございました。\n
        下に表示されるIDを控えておいてください。結果を見るときに必要です。\n
        結果はアンケート特設ページて閲覧可能です。
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">UserIdを手動で振る(誰かが回答する前にしないと無効)</string>

    <string name="pref_title_add_friends_to_messages">質問の使い分け</string>
    <string-array name="pref_example_list_titles">
        <item>1日目</item>
        <item>2日目</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
