<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_marginStart="@dimen/activity_horizontal_margin"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:orientation="vertical">

    <TextView
        android:id="@+id/question_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="Q1"
        android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="ononononononoononon"
        android:textAppearance="?attr/textAppearanceListItem"/>

    <RadioGroup
        android:id="@+id/answer_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RadioButton
            android:text="@string/positive_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/positive_max_button"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/positive_button"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/natural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/natural_button"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/negative_button"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/negative_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/negative__max_button"
            android:layout_weight="1"/>

    </RadioGroup>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/next"
        app:bootstrapBrand="primary"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/answer_button"/>

</LinearLayout>
